进程通信IPC:互斥访问P,V操作需要OS支持...1.共享存储 :基于数据结构的共享以及基于存储区域的共享...2.信息传递 :直接通信(点名道姓)以及间接通信(信箱方式)...3.管道通信(FIFO Pipe):半双工通信,,本质是一个循环队列..允许多个写进程以及一个读进程(数据一旦被读出,就彻底消失)

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -159,3 +159,87 @@
 ### 总结
 
 ![image-20220821204827107](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212048517.png)
+
+## 2.1_4 进程通信`IPC`
+
+> IPC: 两个进程之间产生数据交互
+
+![image-20220821205102558](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212051434.png)
+
+###  WHY操作系统支持?
+
+![image-20220821205558617](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212055954.png)
+
+### 类别
+
+#### 1.共享存储
+
+> 互斥访问:`P,V`操作
+
+![image-20220821205941133](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212059911.png)
+
+##### 基于数据结构`or`存储区域的共享
+
+> - 数据结构共享:低级通信,慢
+> - 存储区共享:  高级通信,快
+
+![image-20220821210250986](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212102300.png)
+
+#### 2.消息传递
+
+![image-20220821210625595](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212106220.png)
+
+##### - 直接通信
+
+> 点名道姓的信息传递;
+>
+> - 发送进程id
+> - 接受进程id
+> - 格式化信息msg
+
+- 发送原语
+
+![image-20220821212110176](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212121922.png)
+
+- 接受原语
+
+![image-20220821212230324](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212122488.png)
+
+- 复制`msg`
+
+![image-20220821212428261](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212124788.png)
+
+##### - 间接通信
+
+> 以`信箱`为中间实体传递
+
+- 发消息
+
+![image-20220821213240011](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212132773.png)
+
+- 收消息
+
+![image-20220821213137634](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212131550.png)
+
+#### 3.管道通信`FIFO Pipe`
+
+> 本质上:通道是一个`循环队列 FIFO`
+>
+> - 只能采用`半双工通信`,某一个时间段内只能`单向运输`
+> - 如果需要`全双工通信`即实现双向同时通信,需要设置两个`管道`
+> - `互斥`访问
+> - 管道写满,写进程阻塞
+> - 管道读空,读进程阻塞
+> - `数据一旦被读出,就彻底消失`;因此当多个进程读同一个管道,可能会错乱
+>   - 允许多个`写`进程,一个`读`进程(408真题)
+>   - 允许多个`写`进程,多个`读`进程,,但系统让各个读进程`轮流读`数据(Linux方案)
+
+###  总结
+
+- 虚拟地址空间:`页表`or`段表`...
+
+![image-20220822083949391](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220839819.png)
+
+### 纠正
+
+![image-20220822084345042](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220843319.png)
