线程的概念,属性,引入线程的变化以及为什么要引入线程? 细化数据流,让进程内部程序代码也可以并发执行...增减了并发度...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -109,7 +109,7 @@
 
 ![image-20220821200408430](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212004101.png)
 
-#### WHY?
+#### Why?
 
 - **原语可以避免信息不统一的情况**
 
@@ -166,7 +166,7 @@
 
 ![image-20220821205102558](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212051434.png)
 
-###  WHY操作系统支持?
+###  Why操作系统支持?
 
 ![image-20220821205558617](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212055954.png)
 
@@ -243,3 +243,28 @@
 ### 纠正
 
 ![image-20220822084345042](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220843319.png)
+
+ 
+
+## 2.1_5 线程的概念
+
+- `轻量级进程`
+
+![image-20220822085851081](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220858526.png)
+
+### `What` & `Why`
+
+- **把执行流细化到线程可以增加并发度**
+  - 进程之间可以`并发`
+    - 但是在引入`线程`之前,进程内的程序代码只能串行顺序执行
+    - 在引入`线程`之后,进程内部也可以让`线程`并发执行
+
+![image-20220822090318175](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220903747.png)
+
+### 引入线程的变化
+
+![image-20220822091123570](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220911649.png)
+
+### 线程的属性
+
+![image-20220822091354650](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220913134.png)
