线程的实现方式以及多线程模型;线程的实现方式:用户级线程以及内核级线程....多线程模型分为:一对一,多对一,多对多模型...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -268,3 +268,43 @@
 ### 线程的属性
 
 ![image-20220822091354650](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220913134.png)
+
+## 2.1_6 线程实现方式`&`多线程模型
+
+![image-20220822091819786](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220918150.png)
+
+### 线程的实现方式
+
+#### 1.用户级线程`ULT`
+
+![image-20220822092408367](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220924955.png)
+
+- 系统看不到,用户看得到
+
+![image-20220822092700412](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220927777.png)
+
+##### 优缺点
+
+![image-20220822093024185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220930099.png)
+
+#### 2.内核级线程`KLT`
+
+![image-20220822093706879](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220937695.png)
+
+### 多线程模型
+
+> 支持内核级别的系统,根据用户级线程和内核级线程的映射关系
+
+#### 一对一模型
+
+![image-20220822093925834](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220939771.png)
+
+#### 多对一模型
+
+> !!!系统只"看得见"内核级线程,只有内核级线程才是处理机分配的单位
+
+![image-20220822094107640](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220941881.png)
+
+#### 多对多模型
+
+![image-20220822094617211](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220946755.png)
