进程的状态与转换&控制

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -308,3 +308,13 @@
 #### 多对多模型
 
 ![image-20220822094617211](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220946755.png)
+
+## 2.1_7 线程的状态与转换
+
+### 状态与转换
+
+![image-20220822103634960](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221036613.png)
+
+### 组织与控制
+
+![image-20220822104154914](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221041578.png)
