调度的概念和层次:高级调度:作业调度...中级调度:内存调度...低级调度:进程调度...挂起态以及七状态模型

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -318,3 +318,42 @@
 ### 组织与控制
 
 ![image-20220822104154914](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221041578.png)
+
+## 2.2_1 调度的概念`&`层次
+
+![image-20220822104537273](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221045992.png)
+
+### 调度基本概念
+
+![image-20220822104715857](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221047258.png)
+
+### 调度的三个层次
+
+#### 1.高级调度--`作业调度`
+
+![image-20220822104902790](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221049137.png)
+
+#### 2.低级调度--`进程调度/处理机调度`
+
+![image-20220822105244353](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221052761.png)
+
+#### 3.中级调度--`内存调度`
+
+![image-20220822105451138](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221054507.png)
+
+### 进程的挂起态`&`七状态模型
+
+> `挂起态`和`阻塞态`二者都是暂时不能获得CPU的服务
+>
+> - 挂起队列是进程映像在`外存`
+> - 阻塞队列是进程映像在`内存`
+
+![image-20220822110051019](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221100361.png)
+
+### 三个层次的联系,对比
+
+![image-20220822110413921](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221104961.png)
+
+### 总结
+
+![image-20220822110521538](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221105845.png)
