进程调度的时机:当前进程:主动或者被动放弃处理机,,,进程调度的方式:抢占式与非抢占式...进程的切换与过程:切换:1.对原来的进程的各种数据进行保存2.对新的进程个数据的恢复(PCB保存)广义上包括:进程的调度和切换

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -357,3 +357,35 @@
 ### 总结
 
 ![image-20220822110521538](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221105845.png)
+
+## 2.2_2 进程调度的时机,切换与过程,方式
+
+![image-20220822150931292](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221509804.png)
+
+### 进程调度的时机
+
+![image-20220822152216384](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221522951.png)
+
+#### 内核程序临界区和临界区的区别
+
+> 本质上:
+>
+> - 普通临界区的访问不会直接影响到OS内核的管理工作,因此在访问普通临界区可以进行调度与切换
+> - 内核程序临界区:如果不尽快释放,极可能影响到OS内核调度管理工作,因此不可以调度与切换
+
+![image-20220822151856838](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221518131.png)
+
+### 进程调度的方式
+
+- 抢占式
+- 非抢占式
+
+![image-20220822152412005](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221524424.png)
+
+### 进程的切换与过程
+
+![image-20220822152550251](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221526233.png)
+
+### 总结
+
+![image-20220822153025976](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221530929.png)
