--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -389,3 +389,19 @@
 ### 总结
 
 ![image-20220822153025976](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221530929.png)
+
+## 2.2_3 调度器和闲逛进程
+
+### 调度器
+
+> 只要就绪队列发生改变,就可能发生进程调度
+
+![image-20220822154014684](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221540348.png)
+
+- 调度对象
+
+![image-20220822154217013](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221542946.png)
+
+### 闲逛进程
+
+![image-20220822154425624](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221544762.png)
