调度算法的评价指标

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -405,3 +405,36 @@
 ### 闲逛进程
 
 ![image-20220822154425624](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221544762.png)
+
+## 2.2_4 调度算法的评价指标
+
+![image-20220822154709434](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221547527.png)
+
+### CPU利用率
+
+- 多道程序可用`甘特图`解决
+
+![image-20220822155703606](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221557150.png)
+
+### 系统吞吐量
+
+![image-20220822155912543](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221559211.png)
+
+### 周转时间
+
+![image-20220822160030085](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221600397.png)
+
+### 带权周转时间
+
+![image-20220822161906600](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221619957.png)
+
+### 等待时间
+
+![image-20220822162604360](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221626846.png)
+
+### 总结
+
+- *带味道的例子*
+
+![image-20220822162717110](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221627711.png)
+
