高响应比优先算法HRRN

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -295,17 +295,17 @@
 
 > 支持内核级别的系统,根据用户级线程和内核级线程的映射关系
 
-#### 一对一模型
+#### 1.一对一模型
 
 ![image-20220822093925834](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220939771.png)
 
-#### 多对一模型
+#### 2.多对一模型
 
 > !!!系统只"看得见"内核级线程,只有内核级线程才是处理机分配的单位
 
 ![image-20220822094107640](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220941881.png)
 
-#### 多对多模型
+#### 3.多对多模型
 
 ![image-20220822094617211](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208220946755.png)
 
@@ -430,6 +430,8 @@
 
 ### 等待时间
 
+> 等于`周转时间-运行时间`
+
 ![image-20220822162604360](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221626846.png)
 
 ### 总结
@@ -438,3 +440,52 @@
 
 ![image-20220822162717110](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221627711.png)
 
+## 2.2_5 调度算法(1)
+
+![image-20220822163600573](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221636554.png)
+
+### 1.先来先服务`FCFS`
+
+![image-20220822164337719](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221643613.png)
+
+#### 例题
+
+![image-20220822164116844](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221641221.png)
+
+### 2.短作业优先`SJF`
+
+![image-20220822173016281](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221730803.png)
+
+#### 例题
+
+##### - 非抢占式
+
+> 短进程优先算法又称`SPF`
+
+![image-20220822170221005](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221702571.png)
+
+##### - 抢占式
+
+> 抢占式的短作业优先算法又称`最短剩余时间优先算法SRTN`
+
+![image-20220822172104368](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221721082.png)
+
+#### 细节(关于最短时间)
+
+![image-20220822172713153](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221727935.png)
+
+### 3.高响应比优先`HRRN`
+
+![image-20220822173231674](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221732109.png)
+
+#### 例题
+
+> 响应比=等待时间+运行时间/运行时间
+
+### 总结
+
+- 适用于`早期的批处理系统`
+
+![image-20220822195107907](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221951071.png)
+
+## 2.2_6 调度算法(2)
