时间片轮转:适合分时系统,基于抢占式

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -489,3 +489,31 @@
 ![image-20220822195107907](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208221951071.png)
 
 ## 2.2_6 调度算法(2)
+
+### 1.时间片轮转`RR`
+
+- 抢占式&或主动放弃处理机
+
+![image-20220822202424378](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222024395.png)
+
+#### 例题
+
+##### 时间片为2
+
+![image-20220822201509536](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222015094.png)
+
+##### 时间片为5
+
+![image-20220822202223871](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222022115.png)
+
+### 2.优先级调度
+
+#### 例题
+
+##### - 非抢占式
+
+![image-20220822203154015](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222031570.png)
+
+##### - 抢占式
+
+![image-20220822203019584](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222032589.png)
