多级反馈队列算法:复杂但全面

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -508,6 +508,8 @@
 
 ### 2.优先级调度
 
+![image-20220822204258794](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222043468.png)
+
 #### 例题
 
 ##### - 非抢占式
@@ -517,3 +519,22 @@
 ##### - 抢占式
 
 ![image-20220822203019584](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222032589.png)
+
+#### 补充
+
+![image-20220822204159996](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222042750.png)
+
+### 3.多级反馈队列
+
+![image-20220822211350914](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222113832.png)
+
+##### 例题
+
+![image-20220822205412048](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222054049.png)
+
+### 总结
+
+- 基于`交互式系统`
+
+![image-20220822211542515](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222115196.png)
+
