多级队列调度算法:采用多级队列,,每一级队列采用的策略不同

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -538,3 +538,8 @@
 
 ![image-20220822211542515](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222115196.png)
 
+## 2.2_7  调度算法(3)
+
+### 多级队列调度
+
+![image-20220822212527349](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222125316.png)
