第二章:进程同步与进程互斥

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -543,3 +543,29 @@
 ### 多级队列调度
 
 ![image-20220822212527349](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222125316.png)
+
+## 2.3_1 进程同步`&`进程互斥
+
+### 进程同步
+
+![image-20220822213338114](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222134983.png)
+
+> 本质上:进程之间的直接制约关系
+
+![image-20220822213518524](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222135367.png)
+
+### 进程互斥
+
+> 本质上:进程之间的间接制约关系
+
+![image-20220822213719641](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222137270.png)
+
+![image-20220822213926287](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222139847.png)
+
+#### 实现原则
+
+![image-20220822214245829](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222142313.png)
+
+### 总结
+
+![image-20220822214435655](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222144017.png)
