进程互斥的软件实现:1.单标志发...2.双标志先检查法...3.双标志后检查法...4.Peterson算法....总结:4种软件实现方法都存在一定的缺点

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -562,10 +562,76 @@
 
 ![image-20220822213926287](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222139847.png)
 
-#### 实现原则
+#### 四大实现原则
 
 ![image-20220822214245829](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222142313.png)
 
 ### 总结
 
 ![image-20220822214435655](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222144017.png)
+
+## 2.3_2 进程互斥的软件实现
+
+![image-20220823084525011](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230845774.png)
+
+### 1.单标志法
+
+> 每个进程进入临界区的权限只能被另一个进程赋予
+
+- `turn`的含义:*谦让*
+
+![image-20220823085720311](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230857082.png)
+
+#### 缺点:空闲让进
+
+![image-20220823090008406](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230900364.png)
+
+### 2.双标志先检查法
+
+> 标记各进程进入临界区的"意愿"
+>
+> 先检查后上锁
+
+![image-20220823090414569](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230904709.png)
+
+#### 缺点:忙则等待
+
+![image-20220823090614428](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230906354.png)
+
+### 3.双标志后检查法
+
+> 先上锁后检查
+
+![image-20220823090820942](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230908878.png)
+
+#### 缺点:空闲让进&有限等待
+
+![image-20220823091604730](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230916681.png)
+
+### 4.Peterson算法
+
+> 结合双标志,单标志的思想
+>
+> - 当双方都争有*意愿*进入临界区,可用尝试*谦让*
+>
+> - 主动争取主动谦让
+
+![image-20220823092121031](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230921724.png)
+
+- 场景1
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230940058.png" alt="image-20220823093416476" style="zoom:50%;" />
+
+- 场景2
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230934047.png" alt="image-20220823093454163" style="zoom:50%;" />
+
+> 最后一次设置turn的值,也就是最后一次*谦让*,则失去主动权
+
+#### 缺点:让权等待
+
+![image-20220823093900641](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230939414.png)
+
+### 总结
+
+![image-20220823094013812](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230940981.png)
