进程互斥的硬件实现:1.中断屏蔽方法...2.TestAndSet指令...3.Swap指令(逻辑上等效于TSL指令)

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -635,3 +635,31 @@
 ### 总结
 
 ![image-20220823094013812](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230940981.png)
+
+## 2.3_3 进程互斥的硬件实现
+
+### 1.中断屏蔽方法
+
+![image-20220823095651767](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230956117.png)
+
+### 2.TestAndSet指令
+
+> 也称`TS`指令或`TSL`指令
+
+![image-20220823100237063](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231002681.png)
+
+- 解决了`双标志先检查法:不一气呵成`照成的逻辑漏洞
+
+- 缺点:不满足`让权等待`
+
+### 3.Swap指令
+
+> 也称:Excharge指令,或则XCHG指令
+
+![image-20220823101512844](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231015487.png)
+
+- 逻辑上:等效于`TSL`指令
+
+### 总结
+
+![image-20220823101745555](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231017038.png)
