互斥锁:适用于多处理机...否则单处理机会出现死锁...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -663,3 +663,14 @@
 ### 总结
 
 ![image-20220823101745555](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231017038.png)
+
+## 2.3_4 互斥锁
+
+![image-20220823102159070](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231022436.png)
+
+### 特点
+
+![image-20220823102425843](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231024042.png)
+
+## 2.3_5 信号量机制
+
