信号量机制:整型信号量机制以及记录型信号量机制...记录型信号量相比整型,多了自动放弃处理机,解决了前者让权等待的问题

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -630,6 +630,8 @@
 
 #### 缺点:让权等待
 
+- 执行1,6,2,7,8顺序时,`违反让权等待`规则
+
 ![image-20220823093900641](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230939414.png)
 
 ### 总结
@@ -674,3 +676,44 @@
 
 ## 2.3_5 信号量机制
 
+![image-20220823104748045](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231047906.png)
+
+### 原语操作信号量
+
+![image-20220823105300993](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231053820.png)
+
+### 1.整型信号量
+
+> 类似于双标志先检查法
+>
+> 但是不满足`让权等待`
+
+![image-20220823105925029](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231059252.png)
+
+### 2.记录型信号量
+
+![image-20220823111100620](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231111770.png)
+
+#### 具体操作
+
+![image-20220823145126561](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231451284.png)
+
+#### 例题
+
+- 初始化
+
+![image-20220823111030837](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231110423.png)
+
+- `P`操作
+
+![image-20220823111431152](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231114744.png)
+
+- `V`操作
+
+![image-20220823111733984](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231117832.png)
+
+###  总结
+
+![image-20220823145412992](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231459218.png)
+
+## 2.3_6 实现互斥,同步,前驱关系
