信号量机制实现进程的互斥,同步,前驱关系...1.实现互斥:初始化Semaphore mutex=1,初始化信号量,然后PV成对出现    2.实现同步关系:前V后P...3.实现前驱关系:思想与实现同步关系类似.

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -717,3 +717,32 @@
 ![image-20220823145412992](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231459218.png)
 
 ## 2.3_6 实现互斥,同步,前驱关系
+
+![image-20220823150618528](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231506071.png)
+
+### 1.实现进程互斥
+
+> `P`和`V`操作必须成对出现
+
+![image-20220823151120932](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231511804.png)
+
+### 2.实现进程同步
+
+![image-20220823151349377](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231513246.png)
+
+#### 前`V`后`P`
+
+![image-20220823151718987](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231517391.png)
+
+### 3.实现前驱关系
+
+> 与实现进程同步相同,,,保证前V后P即可......
+
+![image-20220823152139291](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231521277.png)
+
+### 总结
+
+![image-20220823152503041](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231525969.png)
+
+## 2.3_7 生产者-消费者问题
+
