--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -746,3 +746,24 @@
 
 ## 2.3_7 生产者-消费者问题
 
+### 问题描述
+
+![image-20220823155355170](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231553882.png)
+
+### 问题分析
+
+![image-20220823160101141](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231601648.png)
+
+### 具体实现
+
+![image-20220823160439418](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231604599.png)
+
+#### 思考:能否改变响铃P,V操作的顺序
+
+![image-20220823161130770](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231611132.png)
+
+### 总结
+
+> 前`V`后`P`
+
+![image-20220823161350039](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231613977.png)
