--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -758,7 +758,7 @@
 
 ![image-20220823160439418](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231604599.png)
 
-#### 思考:能否改变响铃P,V操作的顺序
+#### 思考:能否改变相邻`P`,`V`操作的顺序
 
 ![image-20220823161130770](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231611132.png)
 
@@ -767,3 +767,46 @@
 > 前`V`后`P`
 
 ![image-20220823161350039](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231613977.png)
+
+## 2.3.8 多生产者-多消费者问题
+
+### 问题描述
+
+![image-20220823161759674](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231618182.png)
+
+### 问题分析
+
+![image-20220823164339512](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231643528.png)
+
+### 具体分析
+
+![image-20220823170110224](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231701507.png)
+
+#### 思考:互斥访问信号量可否省略?
+
+> 答案:此处可以省略互斥访问信号量
+>
+> - 原因:此处的缓冲区大小为1,可用达到互斥访问的效果
+
+![image-20220823170919562](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231709510.png)
+
+##### 缓冲区容量为1
+
+![image-20220823171129635](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231711336.png)
+
+##### 缓冲区容量为2
+
+> 
+
+![image-20220823171348907](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231713034.png)
+
+### 总结
+
+![image-20220823171816613](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231718120.png)
+
+#### 关键
+
+![image-20220823172110799](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231721739.png)
+
+## 2.3_9 吸烟者问题
+
