吸烟者问题:解决了可以生产多个产品的单生产者问题.....这里的同步信号量含义:吸烟的材料种类的数量...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -810,3 +810,22 @@
 
 ## 2.3_9 吸烟者问题
 
+### 问题描述
+
+![image-20220823191012176](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231910607.png)
+
+### 问题分析
+
+![image-20220823191625884](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231916207.png)
+
+### 具体分析
+
+> 可以省略专门的互斥访问量
+>
+> - 原因:同一时刻最多只有一个`offer`,因此其他的`P(offer)`都会因此阻塞,实现了互斥访问
+
+![image-20220823192448311](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231924944.png)
+
+### 总结
+
+![image-20220823192848031](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231928363.png)
