读者-写者问题:读-读不互斥;读-写互斥;写-写互斥;   实现读写互斥:semphore rw进行pv操作.....保护rw互斥信号量:使用count计数Count解决.....(可能照成写操作饥饿)....semphore w保护写操作,,使得相对公平;

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -778,7 +778,7 @@
 
 ![image-20220823164339512](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231643528.png)
 
-### 具体分析
+### 具体实现
 
 ![image-20220823170110224](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231701507.png)
 
@@ -818,7 +818,7 @@
 
 ![image-20220823191625884](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231916207.png)
 
-### 具体分析
+### 具体实现
 
 > 可以省略专门的互斥访问量
 >
@@ -829,3 +829,43 @@
 ### 总结
 
 ![image-20220823192848031](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231928363.png)
+
+## 2.3_10 读者-写者问题
+
+### 问题描述
+
+![image-20220823194916079](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231949786.png)
+
+### 问题分析
+
+![image-20220823195810370](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231958892.png)
+
+### 具体实现
+
+> `count`作用:很好的跳过了可能因为`P(rw)`导致的阻塞问题
+
+![image-20220823195736675](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208231957188.png)
+
+#### 问题
+
+> 当两个`读进程`并发执行,`count=0`都满足初始条件,但是由于事件片在第一个进程的`P(rw)`之后轮转,,可能会导致第二个进程阻塞
+
+![image-20220823200244037](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232002620.png)
+
+#### 解决
+
+![image-20220823200617034](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232006219.png)
+
+##### 问题
+
+> 仍有潜在的问题:只要读进程还在读,写进程就要一直阻塞等待,可能`饿死`,,,因此,此算法是`读进程优先`
+
+##### 解决
+
+> 又称:读写公平法
+
+![image-20220823202444864](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232024233.png)
+
+### 总结
+
+![image-20220823202826291](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232028577.png)
