--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -869,3 +869,36 @@
 ### 总结
 
 ![image-20220823202826291](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232028577.png)
+
+## 2.3_11 哲学家进餐问题
+
+### 问题描述
+
+![image-20220823203819669](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232038480.png)
+
+### 问题分析
+
+#### 不合理情况
+
+![image-20220823204745560](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232047377.png)
+
+### 具体实现
+
+#### 1.最多只允许4个哲学家同时进餐
+
+![image-20220823205057954](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232051259.png)
+
+#### 2.奇数先左后右,偶数顺序相反
+
+![image-20220823205332223](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232053743.png)
+
+#### 3.仅当左右都有,才允许进餐
+
+![image-20220823210033906](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232100899.png)
+
+### 总结
+
+![image-20220823210517503](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232105407.png)
+
+## 2.3_12 管程
+
