管程:为了解决信号量机制编程麻烦,容易出错.....管程=共享数据结构+数据结构初始化的语句+一组访问数据结构的过程(也就是函数,互斥访问)

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -902,3 +902,34 @@
 
 ## 2.3_12 管程
 
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232109995.png" alt="image-20220823210931063" style="zoom:50%;" />
+
+### 为何引入管程?
+
+> 为了更好的解决`PV`操作,`实现进程同步`
+
+![image-20220823211118964](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232111806.png)
+
+### 管程的定义和基本特征
+
+![image-20220823211807560](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208232118941.png)
+
+### 拓展
+
+#### 1.实现生产者-消费者问题
+
+![image-20220824092550809](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240925053.png)
+
+##### 总结
+
+![image-20220824092847740](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240934684.png)
+
+#### 2`Java`类似管程的机制
+
+> `Synchronized`线程锁
+
+![image-20220824093155180](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240931963.png)
+
+### 总结
+
+![image-20220824093337831](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240933068.png)
