死锁的概念:本质上就是不可抢占式资源的不合理分配导致的无限等待的过程...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -933,3 +933,38 @@
 ### 总结
 
 ![image-20220824093337831](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240933068.png)
+
+## 2.4_1 死锁的概念
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240939089.png" alt="image-20220824093937216" style="zoom:50%;" />
+
+### 什么是死锁?
+
+> 哲学家进餐问题,,都在等待右边的筷子,导致思索...
+
+![image-20220824094039586](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240940391.png)
+
+> 互相等待对方的资源,导致都阻塞,都无法向前...
+
+![image-20220824094416965](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240944702.png)
+
+### 死锁,饥饿,死循环的区别
+
+![image-20220824095057568](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240951093.png)
+
+### 死锁产生的必要条件
+
+![image-20220824095549615](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208240955466.png)
+
+### 死锁产生的时机
+
+![image-20220824102838062](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241028799.png)
+
+### 死锁的处理策略
+
+![image-20220824103108040](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241031955.png)
+
+### 总结
+
+![image-20220824103224247](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241032274.png)
+
