死锁的处理策略:预防死锁:破坏四个必要条件:互斥条件,不剥夺条件,请求和保持条件,循环等待条件...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -968,3 +968,26 @@
 
 ![image-20220824103224247](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241032274.png)
 
+## 2.4_2 预防死锁
+
+![image-20220824103638910](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241036244.png)
+
+### 1.破坏互斥条件
+
+![image-20220824103918580](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241039579.png)
+
+### 2.破坏不剥夺条件
+
+![image-20220824104140849](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241041626.png)
+
+### 3.破坏请求和保持条件
+
+![image-20220824104503238](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241045031.png)
+
+### 4.破坏循环等待条件
+
+![image-20220824104926548](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241049396.png)
+
+### 总结
+
+![image-20220824105007460](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241050542.png)
