--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -991,3 +991,37 @@
 ### 总结
 
 ![image-20220824105007460](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241050542.png)
+
+## 2.4_3 避免死锁
+
+![image-20220824105440321](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241054023.png)
+
+### 何为安全序列?
+
+![image-20220824111118330](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241111246.png)
+
+### 安全序列,不安全序列,死锁的关系
+
+![image-20220824111414469](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241114702.png)
+
+### 银行家算法
+
+![image-20220824112138027](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241121275.png)
+
+### 例题
+
+#### 1.不发生死锁情况
+
+![image-20220824112308384](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241123316.png)
+
+#### 2.发生死锁情况
+
+![image-20220824112700614](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241127066.png)
+
+### 银行家算法流程
+
+![image-20220824113545254](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241135499.png)
+
+### 总结
+
+![image-20220824114024174](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241140710.png)
