--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -562,7 +562,7 @@
 
 ![image-20220822213926287](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222139847.png)
 
-#### 四大实现原则
+#### 互斥四大实现原则
 
 ![image-20220822214245829](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208222142313.png)
 
@@ -1025,3 +1025,29 @@
 ### 总结
 
 ![image-20220824114024174](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241140710.png)
+
+## 2.4_4 死锁的检测和解除
+
+![image-20220824152357358](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241523151.png)
+
+### 数据结构
+
+![image-20220824152554527](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241525946.png)
+
+### 死锁的检测
+
+#### 原理
+
+![image-20220824153606831](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241536236.png)
+
+#### 算法
+
+![image-20220824160132258](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241601893.png)
+
+### 死锁的解除
+
+![image-20220824160504509](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241605014.png)
+
+### 总结
+
+![image-20220824160600635](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241606174.png)
