内存管理的概念以及四个部分:1.内存的分配与回收 2.内存空间的补充 3.地址转换 4.存储保护

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -58,5 +58,35 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241702198.png" alt="image-20220824170253709" style="zoom:50%;" />
 
-### 内存的分配与回收
+### 四个部分
 
+#### 1.内存的分配与回收
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241710295.png" alt="image-20220824171030381" style="zoom:50%;" />
+
+#### 2.内存空间的补充
+
+![image-20220824171445957](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241714299.png)
+
+#### 3.地址转换
+
+![image-20220824171406859](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241714150.png)
+
+#### 4.存储保护
+
+##### - 上,下限寄存器
+
+![image-20220824171717941](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241717301.png)
+
+##### - 基,界址寄存器
+
+> 补充:
+>
+> - 基址寻址:`EA=(BR)+A`      (BR)保持不变,适合多道程序
+> - 变址寻址:`EA=(IX)+A`       A保持不变,适合程序循环操作
+
+![image-20220824172507658](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241725978.png)
+
+### 总结
+
+![image-20220824172931318](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241729206.png)
