覆盖与交换技术...1.覆盖技术=固定区(活跃的程序段)+若干覆盖区(不可能同时被访问的程序段) 在同一个进程(程序)中进行     2.交换技术=文件区+对换区(换出的进程)

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -90,3 +90,24 @@
 ### 总结
 
 ![image-20220824172931318](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241729206.png)
+
+## 3.1_3 覆盖与交换
+
+<img src="C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220824173221424.png" alt="image-20220824173221424" style="zoom:50%;" />
+
+### 覆盖技术
+
+![image-20220824173358041](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241733736.png)
+
+![image-20220824185457486](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241855824.png)
+
+### 交换技术
+
+![image-20220824185816900](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241858703.png)
+
+![image-20220824190325879](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241903592.png)
+
+### 总结
+
+![image-20220824190520456](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241905182.png)
+
