连续分配管理方式:1.单一连续分配(有内部碎片,无外部碎片)  2.固定分区分配(有内部碎片,无外部碎片)  3.动态分区分配(无内部碎片,有外部碎片:通过紧凑技术解决)  数据结构:空闲分区表/空闲分区链   如何选择分区以及分配分区以及回收分区....

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -111,3 +111,75 @@
 
 ![image-20220824190520456](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241905182.png)
 
+## 3.1_4 连续分配管理方式
+
+![image-20220824191033486](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241910134.png)
+
+### 1.单一连续分配
+
+![image-20220824191351628](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241913706.png)
+
+### 2.固定分区分配
+
+![image-20220824191820265](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241918237.png)
+
+
+
+![image-20220824192824723](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241928932.png)
+
+### 3.动态分区分配
+
+![image-20220824193042838](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241930401.png)
+
+#### 数据结构
+
+![image-20220824193205181](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241932479.png)
+
+#### 如何`选择`分区
+
+![image-20220824193407887](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241934497.png)
+
+#### 如何`分配`分区
+
+- 分区未分配完,修改`空闲分区表`数据即可
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241939937.png" alt="image-20220824193857373" style="zoom:50%;" />
+
+- 分区分配完,删除`空闲分区表`对应的`表项`(如果是`空闲分区链`,则删除对应的`节点`)
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241941495.png" alt="image-20220824193924477" style="zoom:50%;" />
+
+#### 如何`回收`分区
+
+1. 回收区`后面`有一个相邻的空闲分区,`合并`
+
+![image-20220824194446406](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241946971.png)
+
+2. 回收区`前面`有一个相邻的空闲分区,`合并`
+
+![image-20220824194555682](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241945420.png)
+
+3. 回收区`前后都有`一个相邻的空闲分区,`合并`
+
+![image-20220824194750657](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241947780.png)
+
+4. 回收区`前后都没有`一个相邻的空闲分区,`新增一个表项`
+
+![image-20220824195259466](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241953278.png)
+
+### 内,外部碎片
+
+![image-20220824195358642](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241954466.png)
+
+
+
+> - 交换:内存换出到外存,外存换入到内存
+>
+> - 内存调度:挂起态到就绪态
+> - 动态分区分配装入方式:动态重定位装入
+
+![image-20220824195655920](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241956650.png)
+
+### 总结
+
+![image-20220824200848124](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242008059.png)
