--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -139,6 +139,8 @@
 
 ![image-20220824193407887](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241934497.png)
 
+[四种动态分区分配算法](# 3.1_5 动态分区分配算法)
+
 #### 如何`分配`分区
 
 - 分区未分配完,修改`空闲分区表`数据即可
@@ -183,3 +185,37 @@
 ### 总结
 
 ![image-20220824200848124](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242008059.png)
+
+## 3.1_5 动态分区分配算法
+
+![image-20220824205322966](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242053045.png)
+
+### 1.首次适应算法
+
+> 按照地址递增排序
+
+![image-20220824210923675](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242109580.png)
+
+### 2.最佳适应算法
+
+> 按照容量递增排序,并且需要不断重排
+>
+> - 缺点:产生很多很小的外部碎片
+
+![image-20220824211302408](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242113193.png)
+
+### 3.最坏适应算法
+
+> 按照容量递减排序
+
+![image-20220824211556768](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242115723.png)
+
+### 4.临近适应算法
+
+![image-20220824212156419](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242121967.png)
+
+反而是第一种算法[首次适应算法](#1.首次适应算法)效果最好
+
+### 总结
+
+![image-20220824212454748](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242124310.png)
