不连续分配管理:1.基本分页存储管理方式: 页表=页号+块号  逻辑地址=页号+页内地址   物理地址=块号+业内地址     块内地址的位数决定页面(块号)大小  其他长度的位数决定页面(物理块)的数量

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -22,7 +22,7 @@
 
 ![image-20220824163147588](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208241631269.png)
 
-### 装入的三种方式
+### 地址转换:装入的三种方式
 
 #### 1.绝对装入
 
@@ -219,3 +219,73 @@
 ### 总结
 
 ![image-20220824212454748](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242124310.png)
+
+## 3.1_6 分页存储管理方式
+
+![image-20220824213239525](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208242132141.png)
+
+### 何为分页存储管理?
+
+![image-20220825102950981](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251029189.png)
+
+### 页表
+
+> 页表项=页号+块号
+
+![image-20220825103129943](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251031615.png)
+
+#### 1.每个页表项占多少个字节?
+
+##### 块号长度
+
+![image-20220825103619352](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251036768.png)
+
+##### 页号长度
+
+![image-20220825103743774](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251037265.png)
+
+##### 页表长度
+
+![image-20220825104009782](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251040165.png)
+
+#### 2.如何实现地址的转换?
+
+> 连续存放时,使用重定位寄存器(`基址寻址`)
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251042868.png" alt="image-20220825104221543" style="zoom:67%;" />
+
+![image-20220825104711259](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251047297.png)
+
+##### 例题
+
+> 逻辑地址=页号+页内偏移量
+>
+> 页表=页号+块号
+>
+> 物理地址=块号*页面大小 + 页内偏移量
+
+![image-20220825105432246](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251054081.png)
+
+##### 细节:页面大小取值
+
+> 页面大小最好是`2的整数幂`
+
+![image-20220825110012587](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251100870.png)
+
+
+
+> 对比第一种方法计算物理地址的优点
+
+![image-20220825110604343](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251106887.png)
+
+##### 优点
+
+![image-20220825111034310](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251110111.png)
+
+#### 3.逻辑地址结构
+
+![image-20220825111359603](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251114138.png)
+
+### 总结
+
+![image-20220825111927975](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251119901.png)
