基本地址变换机构(硬件)以及虚拟地址和实际物理地址的运算过程..一共三步:1.根据逻辑地址计算出页号+页内地址  2.检查页号是否越界合理  3.物理地址=物理块号+页内地址

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -268,6 +268,8 @@
 
 ##### 细节:页面大小取值
 
+[页表大小再探讨](#页表项大小再探讨)
+
 > 页面大小最好是`2的整数幂`
 
 ![image-20220825110012587](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251100870.png)
@@ -289,3 +291,41 @@
 ### 总结
 
 ![image-20220825111927975](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251119901.png)
+
+## 3.1_7 基本地址变换机构(硬件)
+
+![image-20220825112920798](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251129437.png)
+
+### 计算过程
+
+![image-20220825153157554](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251532142.png)
+
+### 流程图
+
+![image-20220825113403679](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251134151.png)
+
+![image-20220825114012007](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251140236.png)
+
+### 例题
+
+> 遵循三个步骤
+>
+> 1. 计算页号,页内偏移量
+> 2. 检查页号是否越界
+> 3. 计算物理地址=内存块号*页面大小+页内便宜量
+
+![image-20220825155204722](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251552196.png)
+
+### 页表项大小再探讨
+
+![image-20220825162009631](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251620519.png)
+
+### 总结
+
+> 一共两次访存
+>
+> 1. 访问页表(页表在内存)
+> 2. 访问目标内存单元
+
+![image-20220825162232000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251622529.png)
+
