--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -329,3 +329,32 @@
 
 ![image-20220825162232000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251622529.png)
 
+## 3.1_8 快表的地址变换机构
+
+![image-20220825162836192](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251628987.png)
+
+### TLB快表
+
+![image-20220825163218033](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251632555.png)
+
+### 流程图
+
+> 对比基本地址变换机构:TLB增加了快表,减少了访存次数
+
+![image-20220825164228599](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251642583.png)
+
+### 快表工作原理
+
+![image-20220825164911159](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251650179.png)
+
+### 快,慢表同时查找
+
+![image-20220825165127851](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251651853.png)
+
+### 局部性原理
+
+![image-20220825170504177](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251705786.png)
+
+### 总结
+
+![image-20220825170558110](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251706512.png)
