两级页表(页目录法):为了解决单级页表的两个问题:1.整个页表内的页表项数量过多,导致页表(在内存中的一段连续空间存储)需要的连续空间过大,,不合理...2.页表过大,不需要全部存放在内存,,可以利用虚拟存储技术以及局部性原理将暂时不用的调入外存,,需要使用的调入内存即可.....页目录法:再将一级页表划分成二级页表即可

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -358,3 +358,66 @@
 ### 总结
 
 ![image-20220825170558110](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251706512.png)
+
+## 3.1_9 两级页表
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251710135.png" alt="image-20220825171007632" style="zoom:50%;" />
+
+### 单级页表存在的问题
+
+- 问题一
+
+![image-20220825194549686](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251945708.png)
+
+- 问题二:局部性原理
+
+![image-20220825194702601](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251947391.png)
+
+### 解决办法:页目录法
+
+![image-20220825195403325](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208251954124.png)
+
+#### 页目录法原理
+
+![image-20220825201011580](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252010337.png)
+
+#### 逻辑地址结构
+
+![image-20220825201256121](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220825201256121.png)
+
+#### 实现地址转换
+
+![image-20220825201744124](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252017819.png)
+
+#### 虚拟存储技术
+
+[详细介绍](#虚拟存储技术)
+
+![image-20220825201944498](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252019598.png)
+
+### 细节
+
+![image-20220825203054413](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252030836.png)
+
+### 总结
+
+![image-20220825203242869](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252032170.png)
+
+## 3.1_10 分段存储管理方式
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
