--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -405,11 +405,13 @@
 
 ## 3.1_10 分段存储管理方式
 
+![image-20220825205303469](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252053146.png)
 
+### 分段
 
+![image-20220825205953169](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252059122.png)
 
-
-
+### 段表
 
 
 
