分段式存储:逻辑结构:段表=段号(省略)+段长+基地址                         段表项取最大,固定;但是段长度不固定;相比于分页式存储,最大不同在于检查段号是否越界之后,依然需要再检查段内地址受否超过段长,,,因为段落的长度不是固定的

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -409,17 +409,40 @@
 
 ### 分段
 
+> 逻辑地址=段号+段内地址
+
 ![image-20220825205953169](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252059122.png)
 
 ### 段表
 
+![image-20220826090442945](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260904581.png)
 
+### 地址变换
 
+![image-20220826090727603](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260907742.png)
 
+### 流程图
 
+> 相比于分页存储:最大的区别在于仍然需要一次检查
+>
+> - 检查段内地址是否超过段长(段的长度不固定,不一定都相同)
 
+![image-20220826091342913](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260913191.png)
 
+### 分段&分页管理对比
 
+![image-20220826091754996](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260917993.png)
 
+- 更容易实现信息共享和保护
 
+![image-20220826091928326](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260919940.png)
 
+![image-20220826092225480](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260922968.png)
+
+- 访存次数
+
+![image-20220826092336844](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260923726.png)
+
+### 总结
+
+![image-20220826092459281](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260925871.png)
