--- a/计算机网络/第一章-计算机网络体系结构.md
+++ b/计算机网络/第一章-计算机网络体系结构.md
@@ -37,3 +37,10 @@
 ### 总结
 
 ![image-20220825213801994](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252138433.png)
+
+## 1.2 计算机网络的组成和分类
+
+![image-20220825214135876](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208252141663.png)
+
+### 组成
+
