段页式存储:为了解决分页和分段的缺点:1.分页的优点:内存空间利用率高,不会产生外部碎片,只会产生少量的页内碎片..缺点:不方便按照逻辑模块实现信息的共享和保护...2.分段的优点:可以很方便的实现信息的共享和保护...缺点:如果段长过大,为其分配连续的空间会不方便,,并且段式管理会产生外部碎片...               逻辑结构=短号+页号+页内地址    段表=段号(可省略)+页表长度+页表所在块号(页表的起始地址)  (这里段表和段式存储的段表不一样:段式=短号(可省略)+段长+段内地址)      需要两次比较:第一次比较虚拟地址的段号是否越界段表长度   第二次比较段表的页表长度和虚拟地址的页号是否越界....一共访存3次:一次段表,一次页表,一次物理块位置

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -383,7 +383,7 @@
 
 #### 逻辑地址结构
 
-![image-20220825201256121](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220825201256121.png)
+![image-20220825201256121](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261114301.png)
 
 #### 实现地址转换
 
@@ -446,3 +446,37 @@
 ### 总结
 
 ![image-20220826092459281](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260925871.png)
+
+## 3.1_11 段页式管理
+
+![image-20220826093027093](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260930474.png)
+
+### 分页,分段的优缺点对比
+
+> 可通过`紧凑`方式解决外部碎片的问题
+
+![image-20220826093239844](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260932437.png)
+
+### 段页式=分页+分段
+
+![image-20220826093607308](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260936258.png)
+
+### 逻辑结构
+
+![image-20220826095200399](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208260952952.png)
+
+### 段表,页表
+
+> 一个进程------对应一个段表-------对应多个页表
+>
+> - `段表的作用`:为了找到内存的页表
+
+![image-20220826100705427](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261007384.png)
+
+### 流程图
+
+![image-20220826101710894](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261017669.png)
+
+### 总结
+
+![image-20220826111326440](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261113922.png)
