--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -480,3 +480,31 @@
 ### 总结
 
 ![image-20220826111326440](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261113922.png)
+
+## 3.2_1 虚拟内存的基本概念
+
+![image-20220826113535345](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261135074.png)
+
+虚拟存储技术
+
+![image-20220826113552769](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261135324.png)
+
+### 传统存储方式的特征,缺点
+
+![image-20220826114018559](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261140200.png)
+
+### 局部性原理
+
+![image-20220826114219017](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261142590.png)
+
+### 虚拟存储的定义和特征
+
+![image-20220826114411793](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261144281.png)
+
+### 如何实现虚拟技术
+
+![image-20220826114718940](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261147324.png)
+
+### 总结
+
+![image-20220826114827608](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261148818.png)
